--- a/conf/test_input_is_protein.config
+++ b/conf/test_input_is_protein.config
@@ -28,8 +28,9 @@ params {
   extract_coding_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   extract_coding_peptide_molecule = 'dayhoff'
 
-  diamond_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
-  diamond_refseq_release = false
-  diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
+  diamond_protein_fasta = false
+  // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
+  // Protein fasta is 453 B
+  diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_db.dmnd'
 
 }
