--- a/conf/test_input_is_protein.config
+++ b/conf/test_input_is_protein.config
@@ -27,6 +27,7 @@ params {
 
   extract_coding_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   extract_coding_peptide_molecule = 'dayhoff'
+  input_is_protein = true
 
   reference_proteome_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   diamond_refseq_release = false
