--- a/conf/test_input_is_protein.config
+++ b/conf/test_input_is_protein.config
@@ -25,8 +25,8 @@ params {
   ["bonobo_liver_ptprc",
       ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/bonobo_liver_ptprc__molecule-dayhoff__coding_reads_peptides.fasta']]]
 
-  extract_coding_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
-  extract_coding_peptide_molecule = 'dayhoff'
+  translate_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
+  translate_peptide_molecule = 'dayhoff'
   input_is_protein = true
 
   reference_proteome_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
